Added min cre field

--- a/setup.html
+++ b/setup.html
@@ -317,6 +317,13 @@
         </tr>
 
         <tr>
+          <td>Minimum CR %:</td>
+          <td>
+            <input id="minCR" type="number" value="0" min="0">
+          </td>
+        </tr>
+
+        <tr>
           <td>Sample Size Score: </td>
           <td>
             <div id="sampleScore">N/A</div>
